--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,6 +6,9 @@ global:
   external_labels:
     monitor: 'codelab-monitor'
 
+rule_files:
+  - '/etc/prometheus/prometheus.rules.yml'
+
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
