--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,11 @@ services:
     volumes:
       - ${PWD}/prometheus.yml:/etc/prometheus/prometheus.yml
       - ${PWD}/prometheus.rules.yml:/etc/prometheus/prometheus.rules.yml
-    expose:
-      - "9090"
     ports:
-      - target: 9090
-        published: 9090
-        protocol: tcp
-        mode: host
+      - 9090:9090
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - 3000:3000
