--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "client_golang"]
-	path = client_golang
+[submodule "client_golang_docker/client_golang"]
+	path = client_golang_docker/client_golang
 	url = https://github.com/prometheus/client_golang.git
