--- a/prometheus.yml
+++ b/prometheus.yml
@@ -21,7 +21,12 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name:       'example-random'
+  - job_name: 'sample-metrics-generator'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['sample-metrics-generator:80']
+      
+  - job_name: 'example-random'
 
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
